--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -7,18 +7,8 @@
   year =        2017,
 }
 
-@article{Whalley2012,
-   author = {Whalley, Richard D. and Choi, Kwing-So},
-   title = {The starting vortex in quiescent air induced by dielectric-barrier-discharge plasma},
-   journal = {Journal of Fluid Mechanics},
-   volume = {703},
-   pages = {192-203},
-   ISSN = {0022-1120
-1469-7645},
-   DOI = {10.1017/jfm.2012.206},
-   year = {2012},
-   type = {Journal Article}
-}
+
+@article{Whalley2012, title={The starting vortex in quiescent air induced by dielectric-barrier-discharge plasma}, volume={703}, DOI={10.1017/jfm.2012.206}, journal={Journal of Fluid Mechanics}, publisher={Cambridge University Press}, author={Whalley, Richard D. and Choi, Kwing-So}, year={2012}, pages={192–203}}
 
 @article{Masuda1979,
    author = {Masuda, Senichi and Washizu, Masao},
@@ -1096,7 +1086,6 @@ type = {Conference Proceedings},
    number = {4},
    pages = {253-273},
    ISSN = {0935-4964},
-   url = {http://download.springer.com/static/pdf/80/art%253A10.1007%252FBF00639695.pdf?originUrl=http%3A%2F%2Flink.springer.com%2Farticle%2F10.1007%2FBF00639695&token2=exp=1495023371~acl=%2Fstatic%2Fpdf%2F80%2Fart%25253A10.1007%25252FBF00639695.pdf%3ForiginUrl%3Dhttp%253A%252F%252Flink.springer.com%252Farticle%252F10.1007%252FBF00639695*~hmac=95d33336c9cff07e071ef8cd2023146a712de61ccfbf468d07c25687c9570d17},
    year = {1996},
    type = {Journal Article}
 }
@@ -1170,4 +1159,75 @@ type = {Conference Proceedings},
   journal={AGARD Rep},
   volume={709},
   year={1984}
+}
+@misc{zhangguling2008,
+  title={应用等离子体物理学},
+  author={张谷令 and 敖玲 and 胡建芳 and 刘元富},
+  year={2008},
+  publisher={北京: 首都师范大学出版社}
+}
+@article{niewanshang2012,
+  title={介质阻挡放电等离子体流动控制研究进展},
+  author={聂万胜 and 程钰锋 and 车学科},
+  journal={力学进展},
+  volume={42},
+  number={6},
+  pages={722--734},
+  year={2012}
+}
+@article{wuhong2015,
+  title={等离子体流动控制研究进展与展望},
+  author={吴云 and 李应红},
+  journal={航空学报},
+  volume={36},
+  number={2},
+  pages={381--405},
+  year={2015}
+}
+@article{Alizard2010,
+   author = {Alizard, Frédéric and Robinet, Jean-Christophe and Rist, Ulrich},
+   title = {Sensitivity analysis of a streamwise corner flow},
+   journal = {Physics of Fluids},
+   volume = {22},
+   number = {1},
+   pages = {014103},
+   ISSN = {10706631},
+   DOI = {10.1063/1.3292009},
+   year = {2010},
+   type = {Journal Article}
+}
+@article{Meliga2012,
+   author = {Meliga, Philippe and Pujals, Gregory and Serre, Éric},
+   title = {Sensitivity of 2-D turbulent flow past a D-shaped cylinder using global stability},
+   journal = {Physics of Fluids},
+   volume = {24},
+   number = {6},
+   pages = {061701},
+   ISSN = {10706631},
+   DOI = {10.1063/1.4724211},
+   year = {2012},
+   type = {Journal Article}
+}
+@article{Bromwne2014,
+   author = {Browne, Oliver M. F. and Rubio, Gonzalo and Ferrer, Esteban and Valero, Eusebio},
+   title = {Sensitivity analysis to unsteady perturbations of complex flows: a discrete approach},
+   journal = {International Journal for Numerical Methods in Fluids},
+   volume = {76},
+   number = {12},
+   pages = {1088-1110},
+   ISSN = {02712091},
+   DOI = {10.1002/fld.3962},
+   year = {2014},
+   type = {Journal Article}
+}
+@article{Alizard2015,
+   author = {Alizard, Frédéric and Robinet, Jean-Christophe and Filliard, Guillaume},
+   title = {Sensitivity analysis of optimal transient growth for turbulent boundary layers},
+   journal = {European Journal of Mechanics - B/Fluids},
+   volume = {49},
+   pages = {373-386},
+   ISSN = {09977546},
+   DOI = {10.1016/j.euromechflu.2014.04.013},
+   year = {2015},
+   type = {Journal Article}
 }
