--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -1,6 +1,320 @@
 \chapter{后掠Hiemenz流动的失稳分析与控制}
+The swept Hiemenz flow is similar to the three-dimensional (3-D) boundary-layer flow over a swept wing. Therefore, it is used to test the control method. The 2-D Hiemenz flow is described as a jet coming from above and impinging on a wall. As for the swept Hiemenz flow, a constant spanwise free stream is introduced. The schematic of the swept Hiemenz flow is depicted in figure \ref{fig:SweptHiemenz}. Some studies focused on the instability near the attachment-line \cite{Lin1996,Guegan2006}. Here, we focus on the region far away from the attachment-line and that is where the crossflow instability dominate the transition. The primary and secondary instability of this three dimensional boundary layer have been fully studied by Malik et al \cite{Malik1994} and their results are used as our base line. The method employed to obtain the self-similar solution is just like Malik et al used. The streamwise velocity at the boundary-layer edge increases linearly with distance, as expressed as
+\begin{equation}\label{e:HiemenzF}
+  U_{\infty}=cx^{\dagger}
+\end{equation}
+where the superscript `$\dagger$' denotes a dimensional variable and $c$ is a constant. The spanwise velocity $W_{\infty}$ at the boundary-layer edge is assumed constant. According to Malik et al.\cite{Malik1994}, $W_{\infty}$ is chosen as the reference velocity, while the boundary-layer thickness, $l^\dagger=(\nu/c)^{\frac{1}{2}}$ is adopted as the length scale. The crossflow Reynolds number is thus defined as $Re_W=W_{\infty}l^\dagger/\nu$, which is denoted as $\bar{R}$ in Ref\cite{Malik1994}.
 \section{后掠Hiemenz流动的稳定性分析}
 
-\section{后掠Hiemenz流动的敏感性分析}
+\begin{figure}
+  \centering
+  % Requires \usepackage{graphicx}
+  \includegraphics[width=0.7\textwidth]{ch3/plot_SweptHiemenz.eps}\\
+  \caption{Swept Hiemenz flow}\label{fig:SweptHiemenz}
+\end{figure}
 
+
+Table \ref{t:testcase} provides a summary of the parameter variations. The work by Malik et al \cite{Malik1994} led to the choice of parameter values for Case 1. Figure \ref{f:Com_Malik1994} shows the streamwise evolution of disturbance energy for Case 1. More than 600 solution points are employed in the streamwise direction and there are approximately 14 points per streamwise wavelength. It has been shown that with only 3 points per streamwise wavelength, PSE  can provide satisfactory results\cite{Joslin1992}. For the resolution in the wall-normal direction, Li et al\cite{Li2015a} stated that 281 points were more than sufficient and 301 points are employed in the present computation. The good agreement between the present results and Malik's \cite{Malik1994} demonstrates the present code is reliable. In fact, this code had been successfully employed in the study of swept wing flows\cite{Xu2011a,Xu2011b} and G\"ortler instabilities\cite{Ren2014a,Ren2014b,Ren2014c,Ren2015,Ren2016}. In NPSE computations, the data of body-force distribution are obtained from the experiment \cite{kriegseis2013velocity} with actuator operating voltages of 8, 9 and 10 kV. In the experiment, plasma actuators were used to generate near wall jets in the quiescent air and the corresponding jet velocities were 1.7, 2.8 and 3.8 m/s for the voltage 8 , 9 and 10 kV, respectively. However, for Case 1, transition delay can be achieved only with an operating voltage of 8 kV; higher voltages generate stronger disturbances that promote transition. Therefore, the crossflow velocity is doubled in Case 2 to investigate the operating voltage effect and the corresponding results will be shown in Section \ref{sec:voltage}.
+\begin{figure}
+  \centering
+  % Requires \usepackage{graphicx}
+  \includegraphics[width=0.6\textwidth]{ch3/comparison_Malik.eps}\\
+  \caption{Comparison with the result in Ref.\cite{Malik1994} ($Re_W=500$)}\label{f:Com_Malik1994}
+\end{figure}
+\begin{table}
+  \caption{Parameters of test cases}\label{t:testcase}
+  \centering
+  \begin{tabular}{p{2.3cm}<{\centering}|p{2.5cm}<{\centering}p{3.5cm}<{\centering}p{2.5cm}<{\centering}p{3.5cm}<{\centering}}%{p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}}
+  \hline
+  % after \\: \hline or \cline{col1-col2} \cline{col3-col4} ...
+        & $c{\rm (s^{-1})}$ & $l^\dagger=(\nu/c)^{\frac{1}{2}} ({\rm mm})$ & $W_\infty{\rm (m/s)}$ & $Re_W=W_\infty l^\dagger/\nu$ \\
+  \hline
+  Case1 & 40          & 0.6014            & 12              & 500 \\
+  Case2 & 40          & 0.6014            & 24              & 1000 \\
+  \hline
+  \end{tabular}
+
+\end{table}
+
+The investigation of the actuators' location effect is mainly based on Case 1. Hence, some stability features are briefly introduced first. The linear local stability results are shown in Figure \ref{f:LST}. The growth rate of primary crossflow modes with spanwise wave number $\beta\in[0.1,1]$ and circular frequency $\omega = 0$ is calculated. Here, the growth rate is defined as the negative imaginary part of complex streamwise wavenumber, namely $-\alpha_i$. The first unstable mode appears at $x = 83$, with $\beta$ of 0.12; the maximum mode growth rate is 0.02431, with $\beta$ of 0.33 at $x =305$. The upper branch of the neutral point moves downstream as $\beta$ increases. The lower branch of the neutral curve is nearly parallel to the $x$ axis, and $\beta$ is smaller than 0.085 for stable modes. Specifically, the growth rates of modes with $0.1<\beta<0.5$ are maintained at a high level.
+\begin{figure}
+  \centering
+  % Requires \usepackage{graphicx}
+  \includegraphics[width=0.6\textwidth]{ch3/growthrate2.eps}\\
+  \caption{Spatial growth rate of stationary crossflow modes}\label{f:LST}
+\end{figure}
+
+NPSE calculations are further conducted to determine the target mode, which probably dominates the transition. Since which mode will dominate highly depends on the environment, here we only consider one possible situation. The simulated spanwise wave numbers are 0.1, 0.2, 0.3, 0.4 and 0.5, with corresponding modes named Mode 1 to 5. Each of these modes are seeded as the primary mode at their own neutral point, which are located at $x=86,101,134,173$ and 218 for Mode 1 to 5, respectively. Their harmonics are excited by the nonlinearity. The amplitudes, defined as the maximum streamwise disturbance velocity, of these primary modes are compared in Figure \ref{f:findtarget} and the initial amplitudes of these modes are identical. Mode 1 first becomes unstable, but its amplitude increases slowly compared to the others. Mode 3 with $\beta$ of 0.3 is the first to achieve saturation at $x = 470$ and it is chosen as the target mode. All the following sensitivity analyses aim at this mode and the control method is also designed to damp this mode.
+%From Figure \ref{f:LST}, we can see that the growth rates of modes with $0.1<\beta<0.5$ always maintain at a high level. That means these modes are all likely to be the dominating mode. 5 cases with fundamental spanwise wave number from 0.1 to 0.5 are computed using NPSE to determine the target mode. The amplitude, defined as the maximum streamwise disturbance velocity, of primary modes from each cases are compared in figure \ref{f:findtarget}. Computations are initialized at the neutral points and the initial amplitude of the primary modes are all the same. Since neutral points of different modes are not the same, computations start at different streamwise location. The mode with $\beta=0.1$ is the first become unstable among all these cases, but it is exceded by others soon. The mode with $\beta=0.3$ saturates first at $x=470$. Generally, secondary instability appears just a little distance before the saturation and triggers the transition over the saturated crossflow vortices, so the mode with $\beta=0.3$ is considered as the dominate mode and is chosen as the target mode.
+\begin{figure}
+  \centering
+  % Requires \usepackage{graphicx}
+  \includegraphics[width=0.6\textwidth]{ch3/umax4.eps}\\
+  \caption{Evolution of primary crossflow modes' amplitude with different fundamental spanwise wave length}\label{f:findtarget}
+\end{figure}
+\section{后掠Hiemenz流动的敏感性分析}
+The sensitivity of the target mode to the body force is investigated to determine the optimal installation angle and location of the plasma actuators. Based on Eq.(\ref{e:G}) (\ref{e:adjointa}), all sensitivity functions are dependent on the output of kinetic energy. Since the sensitivity analyses are based on the linear PSE, our study focuses on the linear stage of disturbance growth. Figure \ref{f:Guvw1} shows the contours of streamwise velocity and isolines of three sensitivity functions at the cross-section $x =280$. The output location is set at $x =500$. The solid lines indicate the positive values, while the dashed lines indicate the negative values. No rollover occurs in the contour of streamwise velocity; the low-momentum and high-momentum streaks are located side by side near the wall, and the crossflow vortices are forming. Note that similar patterns of the sensitivity function distributions can be found at other cross-sections; whether the sensitivity functions are positive or negative is of the most interest.
+\begin{figure}
+  \centering
+  % Requires \usepackage{graphicx}
+  \begin{subfigure}{\textwidth}
+  \includegraphics[width=\textwidth]{ch3/Gu(4).eps}
+  \caption{\label{f:Gu1}}
+  \end{subfigure}\\
+  \bigskip
+  \begin{subfigure}{\textwidth}
+  \includegraphics[width=\textwidth]{ch3/Gv(4).eps}
+  \caption{\label{f:Gv1}}
+  \end{subfigure}\\
+  \bigskip
+  \begin{subfigure}{\textwidth}
+  \includegraphics[width=\textwidth]{ch3/Gw(4).eps}
+  \caption{\label{f:Gw1}}
+  \end{subfigure}
+  \caption{Distribution of the sensitivity functions (a) $G_u$, (b) $G_v$ and (c) $G_w$ at $x =280$ with the output location at $x =500$.}\label{f:Guvw1}
+\end{figure}
+%\begin{figure}
+%  \centering
+  % Requires \usepackage{graphicx}
+%  \includegraphics[width=\textwidth]{Gv(4)}\\
+%  \caption{Distribution of sensitivity function $G_v$ at $x=280$ with the output kinetic energy taken at $x=500$}\label{f:Gv1}
+%\end{figure}
+%\begin{figure}
+%  \centering
+  % Requires \usepackage{graphicx}
+%  \includegraphics[width=\textwidth]{Gw(4)}\\
+%  \caption{Distribution of sensitivity function $G_w$ at $x=280$ with the output kinetic energy taken at $x=500$}\label{f:Gw1}
+%\end{figure}
+
+As shown in Figure \ref{f:Gu1}, the positive values of $G_u$ are distributed beneath the high momentum streaks and overlapping with the low momentum streaks. Otherwise values are negative. Figure \ref{f:Gv1} shows that the positive sensitivity function $G_v$ is concentrated on the low momentum streak and vice versa. That means if we want to use wall-normal forcing, like blowing or suction, the suction should be under the low momentum streaks and the blowing need to be under the high momentum streaks. The neutral lines of $G_v$, where $G_v=0$, are not as twisted as that of $G_u$ and $G_w$ and they are more vertical. The distribution of $G_w$ is similar with that of $G_u$, only switched the positive and the negative. Let's remind the control method proposed by D\"orr and Kloker \cite{dorr2016}. They have two basic control setups called case ACF and CCF shown in Fig 4 in their paper. In the case ACF, the body force with positive spanwise component is imposed under the crossflow vortex where nearly the low momentum streaks locates and the $G_w$ are all negative. In their case CCF, the force with opposite direction is introduced at the secondary vortex where the high momentum streaks locates and $G_w$ is positive. According to Eq.(\ref{e:adjointresult}), a negative product of forcing and the sensitivity function yields a dampening of the disturbance kinetic energy, which implies the correctness of the present sensitivity analyses.
+\begin{figure}
+  \centering
+  % Requires \usepackage{graphicx}
+  \begin{subfigure}{\textwidth}
+  \includegraphics[width=\textwidth]{ch3/Gu(4)_300.eps}
+  \caption{\label{f:Gu1_300}}
+  \end{subfigure}\\
+  \bigskip
+  \begin{subfigure}{\textwidth}
+  \includegraphics[width=\textwidth]{ch3/Gv(4)_300.eps}
+  \caption{\label{f:Gv1_300}}
+  \end{subfigure}\\
+  \bigskip
+  \begin{subfigure}{\textwidth}
+  \includegraphics[width=\textwidth]{ch3/Gw(4)_300.eps}
+  \caption{\label{f:Gw1_300}}
+  \end{subfigure}
+  \caption{Distribution of the sensitivity functions (a) $G_u$, (b) $G_v$ and (c) $G_w$ at $x =280$ with the output location at $x =300$.}\label{f:Guvw1_300}
+\end{figure}
+%\begin{figure}
+%  \centering
+%  % Requires \usepackage{graphicx}
+%  \subfloat[][]{
+%  \label{f:Gu1_300}
+%  \includegraphics[width=0.6\textwidth]{ch3/Gu(4)_300.eps}}\\
+%  \subfloat[][]{
+%  \label{f:Gv1_300}
+%  \includegraphics[width=0.6\textwidth]{ch3/Gv(4)_300.eps}}\\
+%  \subfloat[][]{
+%  \label{f:Gw1_300}
+%  \includegraphics[width=0.6\textwidth]{ch3/Gw(4)_300.eps}}\\
+%  \caption{Distribution of the sensitivity functions (a) $G_u$, (b) $G_v$ and (c) $G_w$ at $x =280$ with the output location at $x =300$.}\label{f:Guvw1_300}
+%\end{figure}
+
+
+Then, different output locations are considered at $x=450,400,300$. Figure \ref{f:Guvw1_300} shows the contours of streamwise velocity and isolines of three sensitivity functions at the cross-section $x=280$ and with the output location at $x=300$. Compared to the case at $x=500$ (see figure \ref{f:Guvw1}), the most sensitive region with respect to streamwise and spanwise force components moves downward to the wall. However, similar patterns to figure \ref{f:Guvw1} are found at $x=350,400$ and 450 (not shown). From this result, we can conclude that in terms of the vicinity influence, force near the wall works better than that away from the wall. Since we are concerned with the evolution of disturbance kinetic energy away from the actuator location, which means sensitivity functions away from the output location, all results shown hereafter are from the case output location at $x=500$.
+
+\begin{figure}
+  \centering
+  % Requires \usepackage{graphicx}
+  \includegraphics[width=\textwidth]{ch3/Gw_xz.eps}\\
+  \caption{Distribution of sensitivity functions $G_w$ at $y=1$}\label{f:Gw_xz}
+\end{figure}
+
+Figure \ref{f:Gw_xz} plots the iso-lines of the sensitivity function, $G_w$, and the contours of the streamwise velocity component in a $z-x$ plane near the wall. From this figure, the streaks can be seen clearly. The red color indicates the high-momentum streak, and the blue indicates the low-momentum streak. Away from the output location, the $G_w$ isolines are parallel to the streak direction. Therefore, the best choice is to set the actuated body-force direction parallel to the streak direction, the crossflow vortex axis, which ensures that the actuation affects the most sensitive region at each streamwise location. D\"orr and Klocker \cite{dorr2015stabilisation,dorr2016} always put their control devices in this manner.
+
+The maximum value of sensitivity functions over spanwise direction is shown in Y-X plane in Figure \ref{f:Guvw_xy}. Since we use the same contour level in all the three pictures, it is evident that the flow is more sensitive to streamwise forcing than that in other two directions. The most sensitive region is located inside the boundary layer but away from the wall. That is because too close to the wall viscous effect and no-slip boundary condition dominate and thus the body force effect declines.
+\begin{figure}
+  \centering
+  % Requires \usepackage{graphicx}
+  \begin{subfigure}{\textwidth}
+  \includegraphics[width=\textwidth]{ch3/maxGu_xy.eps}
+  \caption{\label{f:Gu_xy}}
+  \end{subfigure}\\
+  \bigskip
+  \begin{subfigure}{\textwidth}
+  \includegraphics[width=\textwidth]{ch3/maxGv_xy.eps}
+  \caption{\label{f:Gv_xy}}
+  \end{subfigure}\\
+  \bigskip
+  \begin{subfigure}{\textwidth}
+  \includegraphics[width=\textwidth]{ch3/maxGw_xy.eps}
+  \caption{\label{f:Gw_xy}}
+  \end{subfigure}
+  \caption{Contours of maximum (a) $G_u$, (b) $G_v$ and (c) $G_w$ along the Z direction with the output location at x=500.}\label{f:Guvw_xy}
+\end{figure}
+%\begin{figure}
+%  \centering
+%  % Requires \usepackage{graphicx}
+%  \subfloat[][]{
+%  \label{f:Gu_xy}
+%  \includegraphics[width=0.6\textwidth]{ch3/maxGu_xy.eps}}\\
+%  \subfloat[][]{
+%  \label{f:Gv_xy}
+%  \includegraphics[width=0.6\textwidth]{ch3/maxGv_xy.eps}}\\
+%  \subfloat[][]{
+%  \label{f:Gw_xy}
+%  \includegraphics[width=0.6\textwidth]{ch3/maxGw_xy.eps}}\\
+%  \caption{Contours of maximum (a) $G_u$, (b) $G_v$ and (c) $G_w$ along the Z direction with the output location at x=500.}\label{f:Guvw_xy}
+%\end{figure}
+
+\begin{figure}
+  \centering
+  % Requires \usepackage{graphicx}
+  \includegraphics[width=0.6\textwidth]{ch3/maxG(3).eps}\\
+  \caption{Streamwise distributions of the maximum value of the sensitivity functions on the y-z plane}\label{f:maxsen}
+\end{figure}
+
+Figure \ref{f:maxsen} shows the streamwise distributions of the maximum value of the sensitivity functions on each cross-section. As mentioned before, the neutral point is located at $x=134$ and it is indicated with a vertical dash line in the figure. The maximum values appear immediately upstream of the neutral point consistent with the findings by Pralits \cite{pralits2000sensitivity} for a flat-plate case. Downstream of the neutral point, all sensitive functions decrease rapidly with increasing $x$. This indicates that the actuator is more effective when placed further upstream until the neutral point. However, if the actuator is sufficiently close to the neutral point, it is likely to act as a strong disturbance that over-rides the natural disturbance and dominates transition. Nevertheless, from these sensitivity analyses, we have learnt about the features of this flow from one perspective and determined that the upstream control could be more efficient in the interval in which the natural disturbance have fully developed.
 \section{采用等离子体激发器推迟后掠Hiemenz流动转捩}
+However, the sensitivity analyses are based on a linear assumption, and NPSE computations are required to further investigate the actuator location effect. Here, the data for the body force distribution obtained from the experiment \cite{kriegseis2013velocity} with an actuator operating voltage of 8 kV are used. Figure \ref{f:spanwiseeffect} compares the streamwise mode-energy evolution with the actuator imposed at different spanwise locations. Here, the mode-energy is defined as following:
+\begin{equation}
+{\rm Energy}=\frac{1}{2}\int_{0}^{\infty}{(|\hat u|^2+|\hat v|^2+|\hat w|^2)dy}
+\end{equation}
+Since the mean flow correction mode, (0,0) mode, does not have a complex conjugate, its energy is defined as following:
+\begin{equation}
+{\rm Energy}_{00}=\frac{1}{4}\int_{0}^{\infty}{(|\hat u|^2+|\hat v|^2+|\hat w|^2)dy}
+\end{equation}
+
+Figure \ref{f:spanwiselocations} depicts the actuator locations relative to the local crossflow vortex. The spanwise locations simulated are at $z/T_z = 0.5, 0.6, 0.7, 0.8, 0.9$ and 1.0, with the corresponding Cases (a) to (f). Here, $T_z$ is the wavelength of the primary mode. In Figure \ref{f:spanwiseeffect}, the extent of the actuation region is shown within 2 blue dots; (0,0) mode represents the meanflow correction mode, (0,1) mode the primary mode, and (0,2) mode the mode with double the spanwise wave number of the primary mode. All the first number 0 indicates the frequency is zero and they are all steady modes. The characteristic of the primary mode is consistent with that of the target mode in sensitivity analyses: In Cases (d) and (e), the primary-mode energy decreases considerably with the actuator imposed at the bottom of the crossflow vortex, the negative $G_w$ region. The minimum values of the primary modes' energy are 0.0067 and 0.0077 for Cases (d) and (e), respectively. However, in Cases (a) to (d), the (0,2) mode is promoted, as also observed by D\"orr and Kloker in their DNS study \cite{dorr2016} (Fig 8 in their paper). The (0,2) mode's energy even exceeds that of the primary mode (see Figure \ref{f:d}). Fortunately, in the actuation region all-mode energy decreases in Cases (e) and (f). Therefore, the optimal spanwise actuator location is $z/Tz=0.9$. Note that results with only two spanwise locations are shown in D\"orr and Kloker's DNS\cite{dorr2016}, and in both of them the (0,2) modes were promoted.
+
+\begin{figure}[htb]
+    \centering
+    \begin{subfigure}{0.45\textwidth}           %
+        \includegraphics[width=\linewidth]{ch3/comparemodes(a).eps}
+        \caption{}\label{f:a} 
+    \end{subfigure}
+    %\\ \bigskip
+    \begin{subfigure}{0.45\textwidth}           %
+        %% label for first subfigure
+        \includegraphics[width=\linewidth]{ch3/comparemodes(b).eps}
+        \caption{}\label{f:b}%\includegraphics[width=0.45\linewidth]{forceposition(b)}} \\
+    \end{subfigure}
+    \\ \bigskip
+    \begin{subfigure}{0.45\textwidth}         %
+        %% label for first subfigure
+        \includegraphics[width=\linewidth]{ch3/comparemodes(c).eps} 
+        \caption{}\label{f:c}%\includegraphics[width=0.45\linewidth]{forceposition(c)}}
+    \end{subfigure}
+    %\\ \bigskip
+    \begin{subfigure}{0.45\textwidth}          %
+        %% label for first subfigure
+        \includegraphics[width=\linewidth]{ch3/comparemodes(d).eps}
+        \caption{}\label{f:d}
+    \end{subfigure}
+    \\ \bigskip
+    \begin{subfigure}{0.45\textwidth}         %
+        %% label for first subfigure
+        \includegraphics[width=\linewidth]{ch3/comparemodes(e).eps}
+        \caption{}\label{f:e}
+    \end{subfigure}
+    %\\ \bigskip
+    \begin{subfigure}{0.45\textwidth}          %
+        %% label for first subfigure
+        \includegraphics[width=\linewidth]{ch3/comparemodes(f).eps}
+        \caption{}\label{f:f}
+    \end{subfigure}
+    \caption{Comparison of the streamwise mode-energy evolution with the actuator imposed at different spanwise locations: (a) $z/T_z = 0.5$, (b) $z/T_z = 0.6$, (c) $z/T_z = 0.7$, (d) $z/T_z = 0.8$, (e) $z/T_z = 0.9$, (f) $z/T_z = 1.0$.}
+    \label{f:spanwiseeffect} %% label for entire figure
+\end{figure}
+\begin{figure}[htb]
+    \centering
+    \begin{subfigure}{0.45\textwidth}           %
+        \label{f:a1} %% label for first subfigure
+        %\includegraphics[width=0.3\linewidth]{comparemodes(a)}}
+        \includegraphics[width=\linewidth]{ch3/forceposition(a).eps}
+    \end{subfigure}
+    \begin{subfigure}{0.45\textwidth}
+        \label{f:b1} %% label for first subfigure
+        %\includegraphics[width=0.3\linewidth]{comparemodes(b)}}
+        \includegraphics[width=\linewidth]{ch3/forceposition(b).eps}
+    \end{subfigure}
+    \\ \bigskip
+    \begin{subfigure}{0.45\textwidth}         %
+        \label{f:c1} %% label for first subfigure
+        %\includegraphics[width=0.3\linewidth]{comparemodes(c)}} \\
+        \includegraphics[width=\linewidth]{ch3/forceposition(c).eps} 
+    \end{subfigure}
+    \begin{subfigure}{0.45\textwidth}          %
+        \label{f:d1} %% label for first subfigure
+        \includegraphics[width=\linewidth]{ch3/forceposition(d).eps}
+    \end{subfigure}
+    \\ \bigskip
+    \begin{subfigure}{0.45\textwidth}          %
+        \label{f:e1} %% label for first subfigure
+        \includegraphics[width=\linewidth]{ch3/forceposition(e).eps}
+    \end{subfigure}
+    \begin{subfigure}{0.45\textwidth}          %
+        \label{f:f1} %% label for first subfigure
+        \includegraphics[width=\linewidth]{ch3/forceposition(f).eps}
+    \end{subfigure}
+    \caption{Comparison of the streamwise mode-energy evolution with the actuator imposed at different spanwise locations: (a) $z/T_z = 0.5$, (b) $z/T_z = 0.6$, (c) $z/T_z = 0.7$, (d) $z/T_z = 0.8$, (e) $z/T_z = 0.9$, (f) $z/T_z = 1.0$.}
+    \label{f:spanwiselocations} %% label for entire figure
+\end{figure}
+%\begin{figure}
+%\ContinuedFloat
+%    \centering
+%    \subfloat[][]{           %
+%        \label{f:d} %% label for first subfigure
+%        \includegraphics[width=0.45\linewidth]{comparemodes(d)}
+%        \includegraphics[width=0.45\linewidth]{forceposition(d)}} \\
+    %\hspace{0.0in}
+%    \subfloat[][]{           %
+%        \label{f:e} %% label for first subfigure
+%        \includegraphics[width=0.45\linewidth]{comparemodes(e)}
+%        \includegraphics[width=0.45\linewidth]{forceposition(e)}} \\
+%    \subfloat[][]{           %
+%        \label{f:f} %% label for first subfigure
+%        \includegraphics[width=0.45\linewidth]{comparemodes(f)}
+%        \includegraphics[width=0.45\linewidth]{forceposition(f)}}
+%    \caption{Comparison of crossflow profiles at different streamwise location}
+%    \label{f:spanwiseeffect2} %% label for entire figure
+%\end{figure}
+\begin{figure}
+  \centering
+  % Requires \usepackage{graphicx}
+  \includegraphics[width=\linewidth]{ch3/compare160427-enegy(1).eps}\\
+  \caption{Comparison of control cases with actuators put on different streamwise location}\label{f:streamforce}
+\end{figure}
+\begin{figure}
+  \centering
+  % Requires \usepackage{graphicx}
+  \includegraphics[width=0.6\linewidth]{ch3/compare160427-vmax.eps}\\
+  \caption{Differences of maximum streamwise velocity of primary mode between uncontrolled and controlled cases in the control regions ($x_{\rm start}$: start point of control region)}\label{f:streamforce2}
+\end{figure}
+
+The optimal spanwise location of the plasma actuators is used to investigate their streamwise location effect on transition using NPSE. In sensitivity analyses, a plasma actuator location upstream as possible without contaminating the quiet boundary layer is suggested. Figure \ref{f:streamforce} compares the streamwise mode-energy evolution within different streamwise actuation regions. The actuation regions have the same extent (shown between the two large dots) but different start points, $x_{start}$, at $x=315, 358$ and 400. Here, the body force's strength is reduced to one tenth of the original, because too strong force at upstream will contaminate the boundary layer. A much lower mode energy is obtained for the case with $x_{start}=358$ compared to the one with $x_{start}=400$ because $x_{start}$ of the former case is closer to the neutral point at $x=134$, as pointed out in the sensitivity analyses. Figure \ref{f:streamforce2} further depicts the reduction of the maximum streamwise velocity of the primary mode downstream of $x_{start}$. The largest reduction is given for the case with $x_{start}=315$ in the vicinity of $x_{start}$, where the actuated body-force integration is small and therefore the sensitivity analyses based on the linear assumption are still acceptable. However, downstream of $x_{start}+18.7$, the primary mode suppression becomes weaker and weaker for the case with $x_{start}=315$ because here disturbances are introduced so far upstream that they contaminate the essentially quiet boundary layer. This explains why the case with $x_{start}=358$ provides the most effective flow-transition delay control, as shown in Figure \ref{f:streamforce}. 
+
+Figure \ref{modesenergycase3} gives the LST results of the growth rate of steady crossflow modes for Case 2, where the crossflow velocity is doubled to investigate the operating voltage effect. The first unstable mode appears at $x =85$, with $\beta$ of 0.05; the maximum mode growth rate is 0.0336 with $\beta$ of 0.26 at $x =451$. The neutral-curve slope of the upper branch is smaller than that for Case 1. Figure \ref{growthratecase3} further shows the evolution of the mode energy obtained using NPSE. The simulated wave numbers are 0.1, 0.2, 0.3 and 0.4. The mode with $\beta$ of 0.1 becomes the most unstable upstream but increases slowly compared to the others. Due to its relatively early start and large increase rate, the mode with $\beta$ of 0.2 is chosen as the target mode in the following study.
+
+\begin{figure}
+  \centering
+  % Requires \usepackage{graphicx}
+  \begin{subfigure}{0.48\linewidth}
+    \label{modesenergycase3}
+    \includegraphics[width=\linewidth]{ch3/growthratecase2.eps}
+  \end{subfigure}
+  \begin{subfigure}{0.48\linewidth}
+    \label{growthratecase3}
+    \includegraphics[width=\linewidth]{ch3/umax4case2.eps}
+  \end{subfigure}
+  \caption{Growth rate of steady crossflow modes (a) and evolution of mode energy (b) computed using LST and NPSE, respectively.}\label{f:baseline}
+\end{figure}
+The results of the sensitivity analyses (not shown) are similar to those for Case 1. The higher freestream spanwise velocity in Case 2 allows us to adopt higher operating voltages of 9kV and 10kV. Figure \ref{f:voltage} compares the streamwise mode-energy evolution with different operating actuator voltages. The actuation region ranges from 500 to 550 in the $x$ direction with the optimum spanwise location for each case. The simulated operating voltages are 8 kV, 9 kV and 10 kV, with corresponding maximum jet velocity magnitudes of 1.7 m/s, 2.8 m/s and 3.8 m/s, respectively. Note that only 8,9,10,11,12 kV voltages were provided in the measurement \cite{kriegseis2013velocity} and the last two were too strong for our case. An increase in operating voltage leads to more efficient disturbance suppression upstream for $x = 530$. However, for the case with a 10 kV operating voltage, the disturbance energy starts to increase downstream for $x = 530$, and the energy of the mean flow distortion mode (0, 0) as well as the harmonic mode (0, 2) even exceeds the energy of the primary mode (0, 1). Eventually the harmonic mode (0, 2) dominates the flow. Forcing that is too strong may cause the formation of nocent vortices that promote transition to turbulence, as also reported by the DNS study \cite{dorr2016}. Therefore, it can be concluded that for Case 2, the moderate operating voltage of 9 kV provides the most effective flow-transition delay control.
+
+\begin{figure}
+  \centering
+  % Requires \usepackage{graphicx}
+  \includegraphics[width=\linewidth]{ch3/compare754-843(3).eps}\\
+  \caption{Evolution of modes energy controlled by plasma actuator with different operating voltage}\label{f:voltage}
+\end{figure}
