--- a/wzf_main.tex
+++ b/wzf_main.tex
@@ -1,4 +1,4 @@
-\documentclass[type=master]{thuthesis}
+\documentclass[type=doctor]{thuthesis}
 % 选项：
 %   type=[bachelor|master|doctor|postdoctor], % 必选
 %   secret,                                   % 可选
@@ -10,7 +10,15 @@
 
 % 所有其它可能用到的包都统一放到这里了，可以根据自己的实际添加或者删除。
 \usepackage{thuthesis}
-
+\usepackage{mathrsfs}
+\newcommand\p{\partial}
+\newcommand\dd{\textmd{d}}
+\newcommand\Prl{\mbox{{\textit{Pr}}}}
+\newcommand\Ma{\mbox{{\textit{Ma}}}}
+\newcommand\Rey{\mbox{{\textit{Re}}}}
+\newcommand\ii{\textmd{i}}
+\newcommand{\SF}[1]{\textsf{\textbf{#1}}}
+%\newcommand{\mb}[1]{\mathbold{#1}}
 % 定义所有的图片文件在 figures 子目录下
 \graphicspath{{../figures/}}
 
@@ -70,7 +78,8 @@
 
 %% 附录
 \begin{appendix}
-\input{data/appendix}
+\input{data/appendix01}
+\input{data/appendix02}
 \end{appendix}
 
 %% 个人简历
